nginx/nginxDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxdeployment
spec:
  selector:
    matchLabels:
      app: nginxdeployment
  template:
    metadata:
      labels:
        app: nginxdeployment
    spec:
      containers:
      - name: nginxdeployment
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
