nginx/nginxServices.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxServices
spec:
  selector:
    app: nginxDeployment
  ports:
  - port: 80
    targetPort: 80
