nginx/nginxIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxIngress
  labels:
    name: nginxIngress
spec:
  rules:
  - host: example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginxServices
            port: 
              number: 80
